--- a/project/index.html
+++ b/project/index.html
@@ -19,35 +19,35 @@
       <div class="card">
         <h2>Spider-man Maximum Carnage</h2>
         <img src="img/foto1.png" alt="foto1">
-        <p>Esse foi o primero jogo do Spider-man a ser criado em (1994).</p>
+        <p>🕷️ Spider-Man: Maximum Carnage (1994) Inspirado nos quadrinhos, este beat 'em up coloca Spider-Man e Venom contra Carnage e sua gangue, em um jogo desafiador lançado para Super Nintendo e Sega Genesis.</p>
         <a href="https://youtu.be/QT39TTv4F3w?si=mF2uvzpI6OCPukQf"><button>Saiba Mais</button></a>
       </div>
 
       <div class="card">
         <h2>Spider-man</h2>
         <img src="img/foto2.png" alt="foto2">
-        <p>Esse foi o segundo jogo do Spider-man a ser criado em (2000).</p>
+        <p>🎮 Spider-Man (2000) No primeiro grande jogo 3D do herói, Spider-Man precisa limpar seu nome após ser acusado injustamente, enfrentando vilões clássicos e explorando a cidade de forma inédita.</p>
         <a href="https://youtu.be/cgdEmbL5sKU?si=CVUpBKxo0Ckq-gVE"><button>Saiba Mais</button></a>
       </div>
 
       <div class="card">
         <h2>SPIDER-MAN 2 ELECTRO</h2>
         <img src="img/foto3.png" alt="foto3">
-        <p>Esse foi o primero jogo do Spider-man a ser criado em (2001).</p>
+        <p>⚡ Spider-Man 2: Enter Electro (2001) A sequência do jogo anterior traz Electro como vilão principal, com novas fases e inimigos, aumentando a variedade de batalhas e desafios no PlayStation.</p>
         <a href="https://youtu.be/7Iv4QxSXhCc?si=oARriL_yhazwOUA5"><button>Saiba Mais</button></a>
       </div>
 
       <div class="card">
         <h2>SPIDER-MAN Marvel</h2>
         <img src="img/foto4.png" alt="foto4">
-        <p>Esse foi o primero jogo do Spider-man a ser criado em (2018).</p>
+        <p>🌆 Spider-Man (Marvel, 2018) Um dos melhores jogos do herói, com mundo aberto detalhado e uma narrativa emocionante, onde Peter Parker combate vilões enquanto enfrenta desafios pessoais.</p>
         <a href="https://youtu.be/LlLdzOHDfJo?si=tEZT32FZ6dgF3FG8"><button>Saiba Mais</button></a>
       </div>
 
       <div class="card">
         <h2>SPIDER-MAN 2 Marvel</h2>
         <img src="img/foto5.png" alt="foto5">
-        <p>Esse foi o primero jogo do Spider-man a ser criado em (2020).</p>
+        <p>🦸 Spider-Man 2 (Marvel, 2023) Expande o universo do jogo anterior, permitindo jogar como Peter e Miles, com novos poderes, inimigos e um enredo intenso que coloca Venom e Kraven no centro da ação.</p>
         <a href="https://youtu.be/wkpzSNvexVE?si=_-weuMVKVJHPydgJ"><button>Saiba Mais</button></a>
       </div>
     </div>
